--- a/style.css
+++ b/style.css
@@ -72,4 +72,8 @@ body {
   width: 170px;
   margin-left: auto;
   margin-top: auto;
+}
+.background .image img {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=style.css.map */
