--- a/style.scss
+++ b/style.scss
@@ -71,5 +71,9 @@ body{
         width: 170px;
         margin-left: auto;
         margin-top: auto;
+        img{
+            width: 100%;
+            height: 100%;
+        }
     }
 }
